UtahLiveDataTest/src/objects/CFDAProgram__c.object
<CustomObject>
    <fields>
        <fullName>AccountIdentification121__c</fullName>
        <label>Account Identification (121)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appeals096__c</fullName>
        <label>Appeals (096)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApplicantEligibility081__c</fullName>
        <label>Applicant Eligibility (081)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApplicationProcedures092__c</fullName>
        <label>Application Procedures (092)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Audits112__c</fullName>
        <label>Audits (112)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Authorization040__c</fullName>
        <label>Authorization (040)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AwardProcedure093__c</fullName>
        <label>Award Procedure (093)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BeneficiaryEligibility082__c</fullName>
        <label>Beneficiary Eligibility (082)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CredentialsDocumentation083__c</fullName>
        <label>Credentials/Documentation (083)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CriteriaForSelectingProposals180__c</fullName>
        <label>Criteria for Selecting Proposals (180)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deadlines094__c</fullName>
        <label>Deadlines (094)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExamplesOfFundedProjects170__c</fullName>
        <label>Examples of Funded Projects (170)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FederalAgency030__c</fullName>
        <label>Federal Agency (030)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FormulaAndMatchingRequirements101__c</fullName>
        <label>Formula and Matching Requirements (101)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HeadquartersOffice152__c</fullName>
        <label>Headquarters Office (152)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LengthAndTimePhasingOfAssistance102__c</fullName>
        <label>Length and Time Phasing of Assistance102</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objectives050__c</fullName>
        <label>Objectives (050)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Obligations122__c</fullName>
        <label>Obligations (122)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreapplicationCoordination091__c</fullName>
        <label>Preapplication Coordination (091)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramAccomplishments130__c</fullName>
        <label>Program Accomplishments (130)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramName020__c</fullName>
        <label>Program Name(020)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProgramNumber__c</fullName>
        <externalId>true</externalId>
        <label>Program Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramTitle__c</fullName>
        <label>Program title</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RangeAndAverageOfFinancialAssistance123__c</fullName>
        <label>RangeAndAverageOfFinancialAssistanc123</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RangeOfApprovalDisapprovalTime095__c</fullName>
        <label>Range of Approval/Disapproval Time (095)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Records113__c</fullName>
        <label>Records (113)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RegionalOrLocalOffice151__c</fullName>
        <label>Regional or Local Office (151)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RegulationsGuidelinesAndLiterature__c</fullName>
        <label>Regulations,Guidelines,andLiterature140</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RelatedPrograms160__c</fullName>
        <label>Related Programs (160)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewals097__c</fullName>
        <label>Renewals (097)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reports111__c</fullName>
        <label>Reports (111)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TypesOfAssistance060__c</fullName>
        <label>Types of Assistance (060)</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UsesAndUseRestrictions070__c</fullName>
        <label>Uses and Use Restrictions (070)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WebsiteAddress153__c</fullName>
        <label>Website Address (153)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CFDAProgram</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CFDAProgram Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFDAProgram</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>